src/main/java/com/banking/accounting/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
