src/main/java/com/banking/accounting/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80
